--- a/11_asympls.qmd
+++ b/11_asympls.qmd
@@ -1,17 +1,13 @@
----
-title: "Asymptotic Theory for Least Squares"
----
-
-## Introduction
+# Asymptotic Theory for Least Squares
 
 ::: {#thm-rss}
-## Random sampling assumption (\@Hansen2022 Definition 1.2)
+## Random sampling assumption (@Hansen2022 Definition 1.2)
 
 The variables $(Y_i, X_i)$ are a **random sample** if they are mutually independent and identically distributed (i.i.d.) across $i=1,\ldots, n$.
 :::
 
 ::: {#thm-blp}
-## Best linear predictor 관련 assumption (\@Hansen2022 Assumption 2.1)
+## Best linear predictor 관련 assumption (@Hansen2022 Assumption 2.1)
 
 1.  $E[Y^2]<\infty$
 2.  $E\|X\|^2 < \infty$
@@ -21,14 +17,15 @@ The variables $(Y_i, X_i)$ are a **random sample** if they are mutually independ
 
 ($Q_{XX}$가 positive definite일 때 linearly independence는 찾아볼 것)
 
+```{=html}
 <!--
 positive definiteness와 linearly independent:
 https://sites.calvin.edu/scofield/courses/m355/handouts/definiteMatrices.pdf
 -->
-
+```
 :::
 
-위의 random sampling과 finite second moment assumption을 가져간채로 least squares estimation에 대한 assumption을 다시 정리한다. (\@Hansen2022 Assumption 7.1)
+위의 random sampling과 finite second moment assumption을 가져간채로 least squares estimation에 대한 assumption을 다시 정리한다. (@Hansen2022 Assumption 7.1)
 
 1.  The variables $(Y_i, X_i)$, $i=1,\ldots, n$ are i.i.d.
 2.  $E[Y^2]<\infty$.
@@ -42,7 +39,7 @@ https://sites.calvin.edu/scofield/courses/m355/handouts/definiteMatrices.pdf
 1.  weak law of large numbers (WLLN)
 2.  continuous mapping theorem (CMT)
 
-을 이용해 보이는 것이다. (\@Hansen2022 7.2)
+을 이용해 보이는 것이다. (@Hansen2022 7.2)
 
 Derivation을 다음과 같은 요소들로 구성된다.
 
@@ -87,24 +84,20 @@ $$
 \sqrt{n}(\hat{\beta} - \beta) = \Big( \frac{1}{n}\sum_{i=1}^n X_i X_i^T \Big)^{-1} \Big(\frac{1}{\sqrt{n} }\sum_{i=1}^n X_i e_i \Big).
 $$즉 normalized and centered estimator $\sqrt{n}(\hat{\beta} - \beta)$는 (1) sample average의 함수 $\Big( \frac{1}{n}\sum_{i=1}^n X_i X_i^T \Big)^{-1}$과 normalized sample average $\Big(\frac{1}{\sqrt{n} }\sum_{i=1}^n X_i e_i \Big)$의 곱으로 쓸 수 있다.
 
-그러면 뒷부분은 $E[Xe]=0$이고 이것의 $k\times k$ 공분산함수를 다음과 같이 둘 수 있다.
-$$
+그러면 뒷부분은 $E[Xe]=0$이고 이것의 $k\times k$ 공분산함수를 다음과 같이 둘 수 있다. $$
 \Omega = E[(Xe)(Xe)^T] = E[XX^T e^2].
-$$
-그리고 아래 가정에서처럼 $\Omega <\infty$라는 가정 하에 $X_i e_i$는 i.i.d. mean zero, 유한한 분산을 갖고 CLT에 의해
-$$
+$$ 그리고 아래 가정에서처럼 $\Omega <\infty$라는 가정 하에 $X_i e_i$는 i.i.d. mean zero, 유한한 분산을 갖고 CLT에 의해 $$
 \frac{1}{\sqrt{n}} \sum_{i=1}^n X_i e_i \stackrel{d}{\rightarrow}\mathcal{N}(0,\Omega).
 $$
 
-(\@Hansen2022 Assumption 7.2)
+(@Hansen2022 Assumption 7.2)
 
 1.  The variables $(Y_i, X_i), i=1,\ldots, n$ are i.i.d.
 2.  $E[Y^4]<\infty$.
 3.  $E\|X\|^4 <\infty$.
 4.  $Q_{XX} = E[XX^{T}]$ is positive definite.
 
-$\Omega <\infty$임을 보이려면 $jl$번째 원소 $E[X_jX_le^2]$이 유한함을 보이면 될 것이다. Properties of Linear Projection Model  (\@Hansen2022 Theorem 2.9.6) (If $E|Y|^r <\infty$ and $E|X|^r <\infty$ for $r\geq 2$, then $E|e|^r <\infty$)을 이용해 위의 2, 3번 조건에 의해 $E[e^4]<\infty$임을 보일 수 있다. 그러면 expectation inequality에 의해 $\Omega$의 $jl$번째 원소는 다음과 같이 bounded된다.
-$$
+$\Omega <\infty$임을 보이려면 $jl$번째 원소 $E[X_jX_le^2]$이 유한함을 보이면 될 것이다. Properties of Linear Projection Model (@Hansen2022 Theorem 2.9.6) (If $E|Y|^r <\infty$ and $E|X|^r <\infty$ for $r\geq 2$, then $E|e|^r <\infty$)을 이용해 위의 2, 3번 조건에 의해 $E[e^4]<\infty$임을 보일 수 있다. 그러면 expectation inequality에 의해 $\Omega$의 $jl$번째 원소는 다음과 같이 bounded된다. $$
 |E[X_jX_le^2]|\leq E|X_jX_le^2| = E[|X_j||X_l|e^2].
 $$
 
