--- a/slm.qmd
+++ b/slm.qmd
@@ -6,6 +6,8 @@ Spatial linear models 2장
 -->
 ```
 
+- Reference: [Spatial Linear Models for Environmental Data](https://www.routledge.com/Spatial-Linear-Models-for-Environmental-Data/Zimmerman-VerHoef/p/book/9780367183349)
+
 ## Linear Model
 
 -   A **linear model** for a response variable $Y$ postulates that the response is related to the observed values of $p$ explanatory variables $X_1, \ldots, X_p$ via this equation: $$
